# winky

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_RU.md  SECURITY.md  THEME_CUSTOMIZATION.md  electron-builder.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.mts  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
.run/: install.run.xml  major.run.xml  minor.run.xml  patch.run.xml
brand/: Untitled.prproj
docs/: releases.md
scripts/: sync-tauri-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  auth.rs  config.rs  constants.rs  deep_link_file.rs  gemini.rs  history.rs  hotkeys.rs  local_speech.rs  logging.rs  main.rs  notes.rs  oauth.rs  oauth_server.rs  ollama.rs  openai.rs  resources.rs  tray.rs  types.rs
src/main/: config.ts  main.ts  preload.ts  tray.ts
src/main/app/: appLifecycle.ts  oauth.ts
src/main/hotkeys/: HotkeyManager.ts
src/main/ipc/: registerIpcHandlers.ts
src/main/services/: api.ts  autoLaunch.ts  configSync.ts  loginFlow.ts  oauth.service.ts
src/main/state/: currentUser.ts
src/main/utils/: logger.ts
src/main/windows/: ErrorWindowController.ts  MainWindowController.ts  MicWindowController.ts  ResultWindowController.ts  WindowController.ts  WindowRegistry.ts  emitToAllWindows.ts
src/renderer/: App.tsx  index.css  index.html  main.tsx  tailwind.css  types.d.ts  winkyBridge.ts
src/renderer/auth/: auth-context.tsx  (+1 more)
src/shared/: api.ts  constants.ts  types.ts
(+225 files in other folders)
