[package]
name = "winky"
version = "0.9.7"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "gzip", "brotli", "deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.9", features = ["macros"] }
tauri = { version = "2.9.3", features = ["macos-private-api", "tray-icon", "devtools"] }
tauri-plugin-deep-link = "2.4.5"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-opener = "2.3.1"
tauri-plugin-shell = "2.3.3"
tauri-plugin-single-instance = "2.3.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-autostart = "2.0.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "fs", "time", "sync", "process"] }
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.8", features = ["serde", "v4"] }
zip = "0.6"
flate2 = "1.0"
futures-util = "0.3"
image = "0.25"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "securitybaseapi", "handleapi", "winnt", "mmsystem"] }

[features]
default = ["custom-protocol"]
custom-protocol = []
devtools = []
